--- a/docs/WeeklyMinutes/11Dec2017.md
+++ b/docs/WeeklyMinutes/11Dec2017.md
@@ -55,6 +55,7 @@
 #### OSG-Connect 
    
 #### StashCache operations
+   * XRootD v4.8.0-rc1 under tests for about week, should receive official release on Wednesday by xrootd-devs and make it ready for OSG release and testing by the end of Friday this week
 
 #### GRACC operations
    * ES version update on the whole cluster 
