--- a/docs/WeeklyMinutes/26Feb2018.md
+++ b/docs/WeeklyMinutes/26Feb2018.md
@@ -29,11 +29,12 @@
 #### StashCache operations
    * [TB served](http://tinyurl.com/ydaereyo): 19.7TB
    * [Cache hits](http://tinyurl.com/ydaereyo): 416TB
-   * StashCache delivered TB of data at a cache hit rate of 95%
+   * StashCache delivered 416TB of data at a cache hit rate of 95%
    
 ####  GRACC operations
    * ITB factory logs messed up in GRACC - fixed; [#36065](https://ticket.opensciencegrid.org/36065)
    * Purdue APEL reporting for CPUDuration is incorrect - fixed; [#35824](https://ticket.opensciencegrid.org/35824)
+   * Belle2 added to the accounting list - fixed; [#35824](https://ticket.opensciencegrid.org/35935)
 
 ## Operations This Week
    
@@ -49,6 +50,8 @@
 #### GRACC operations
    * VO changes/corrections; [#38520](https://ticket.opensciencegrid.org/35820)
    * Need FIFE projects to be registered in order to remove "Unknown" entries in GRACC: [#35824](https://ticket.opensciencegrid.org/35943)
+   * VO changes for -Connect VOs [#35820](https://ticket.opensciencegrid.org/35820)
+   * resume work on GRACC SLA
 
 ## New Registrations
 
